--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 /* estilos generales */
 body{
-    overflow-x: hidden;
+    overflow-x:scroll;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -23,17 +23,18 @@ main{
 h1{
     margin: 1rem;
 }
+
 div .row{
-    padding-top: 0.5rem;
+    padding: 2rem;
+    margin: 3rem;
+    text-align: center;
+    align-items: center;
 }
+
 img {
     max-width: 100%;
     max-height: 100%;
     align-items: center;
-}
-
-imgDivisa {
-    width: 50vw;
     border-radius: 10px;
 }
 
@@ -41,10 +42,13 @@ imgDivisa {
     color: #fff;
     background-color: #5d7da0;
     border-color: #506c89;
+    border-radius: 10px;
 }
 .btn:hover, .btn:focus, .btn.focus {
     color: #333;
+    font-style: italic;
     text-decoration: none;
+    text-shadow: rgba(0, 0, 0, .5);
 }
 .btn-secondary {
     color: #fff;
